@@ -26,7 +26,7 @@ INSTALL_MAN=	$(INSTALL) -m 644
 INSTALL_SBIN=	$(INSTALL) -m 755
 
 RM=		rm
-RMFLAGS=	-rf
+RMFLAGS=	-f
 
 PACKAGE=	@PACKAGE@
 VERSION=	@VERSION@
